# beacon

./: .gitignore  Anchor.toml  README.md
apps/web/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/issue/: page.tsx
apps/web/src/app/verify/: page.tsx
apps/web/src/components/: architecture.tsx  cta.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  schema-gallery.tsx  use-scroll-nav.ts
apps/web/src/lib/: utils.ts
programs/beacon/: Cargo.toml
programs/beacon/src/: lib.rs
