[package]
name = "beacon"
version = "0.1.0"
description = "Beacon: on-chain reputation protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beacon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
